# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL

*portage 1.8.8-r1 (1 Feb 2002)

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> portage.py, ebuild.sh, ebuild.5 :
  added support for a pkg_setup() function which is executed before anything
  else and can be typically used for package configuration actions or required
  system checks

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> portage.py :
  implemented the noauto MAINTAINER flags for all relevant ebuild commands

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> portage.py :
  make env-update disregard backup files
  
  1 Feb 2002; G.Bevin <gbevin@gentoo.org> emerge :
  added --pretend support instead of interactively asking to proceed,
  also added a delay before unmerging though to be sure

*portage 1.8.8 (1 Feb 2002)

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> emerge :
  added --safe switch to complement the --unmerge option

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> portage.py :
  rewrote the packagename without category support to also graceously handle
  deps specifiers at the beginning, this shouldn't be used in the ebuilds, but
  are very handy when using emerge --unmerge

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> emerge :
  added emerge --unmerge support

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> portage.py :
  added packagename without category support in the dep_match function

*portage 1.8.7 (30 Jan 2002)

  30 Jan 2002; G.Bevin <gbevin@gentoo.org> portage.py :
  integrated and slightly adapted Brent Rahn's code to support package names
  without category

  30 Jan 2002; G.Bevin <gbevin@gentoo.org> ebuild.sh :
  integrated and fixed Azarah's patch to fix the wrongly generated archive size
  in the digests

*portage 1.8.6-r3 (28 Jan 2002)

  28 Jan 2002; G.Bevin <gbevin@gentoo.org> portage.py :
  disabled warnings about non existant config file paths

  28 Jan 2002; G.Bevin <gbevin@gentoo.org> emerge :