@@ -3,10 +3,8 @@ import os
 from os.path import walk, splitext, exists, basename, dirname
 import sys
 
-if os.getuid()!=0:
-	print "!!! emerge must be run by root."
-	sys.exit(1)
-
+import output
+from output import *
 import portage
 import xpak
 import string
@@ -15,6 +13,40 @@ import commands
 import shutil
 import re
 import time
+
+#number of ebuilds merged
+merged=0
+opts=["--world","--help","--pretend","--buildpkg","--usepkg","--autoclean","--clean","--debug","--fetchonly","--noreplace","--onlydeps","--verbose","--search","--unmerge","--safe"]
+modes=["rsync","system","update","config"]
+myopts=[]
+mymode=[]
+myfiles=[]
+edebug=0
+for x in sys.argv[1:]:
+	if len(x)>=2:
+		if x[0:2]=="--":
+			if x in opts:
+				myopts.append(x)
+			else:
+				print "!!! Error:",x,"is an invalid option."
+				sys.exit(1)
+		elif x in modes:
+			if len(mymode)>=1:
+				print "!!! Error: more than one mode specified on command-line."
+				print "!!! Available modes:",modes
+				sys.exit(1)
+			else:
+				mymode.append(x)
+		else:	
+				#this little conditional helps tab completion
+				if x[-1]=="/":
+					myfiles.append(x[:-1])
+				else:
+					myfiles.append(x)
+
+if os.getuid()!=0 and "--help" not in myopts and "--search" not in myopts:
+	print "!!! to be able to perform the requested action emerge must be run by root."
+	sys.exit(1)
 
 # search functionality
 class search:
@@ -54,19 +86,19 @@ class search:
 
 	def output(self):
 		"""Outputs the results of the search."""
-		print "[ Results for search key :\x1b[37;01m",self.searchkey,"\x1b[0m]"
-		print "[ Applications found :\x1b[37;01m", str(len(self.packagematches)), "\x1b[0m]"
+		print "[ Results for search key : "+white(self.searchkey)+" ]"
+		print "[ Applications found : "+white(str(len(self.packagematches)))+" ]"
 		print " "
 		for match in self.packagematches:
 			full_package = strip(self.treecache.dep_bestmatch(match))
 			if len(full_package) > 1:
-				print "\x1b[32;01m*\x1b[0m ",   "\x1b[37;01m", match,"\x1b[0m"
+				print green("*")+"  "+white(match)
 				print "     ", "Latest version Available: ", self.getVersion(full_package, search.VERSION_RELEASE)
 				print "     ", self.getInstallationStatus(match)
 				print "     ", "Description: ", self.getDescription(self.getFullPath(match, full_package),self.getVersion(full_package, search.VERSION_SHORT))
 				print " "
 			else:
-				print "\x1b[32;01m*\x1b[0m ",   "\x1b[37;01m", match,"\x1b[0m \x1b[31;01m[ Masked ]\x1b[0m"
+				print green("*")+"  "+white(match)+" "+red("[ Masked ]")
 				print " "
 		
 	#
@@ -287,11 +319,11 @@ class depgraph:
 	def display(self,mylist):
 		for x in mylist:
 			if self.db[x[1]]["vartree"].exists_specific(x[2]):
-				addl=" \x1b[33;01mR\x1b[0m "
+				addl=" "+yellow("R")+" "
 			elif self.db[x[1]]["vartree"].exists_specific_cat(x[2]):
-				addl="  \x1b[36;01mU\x1b[0m"
+				addl="  "+turquoise("U")
 			else:
-				addl="\x1b[32;01mN\x1b[0m  "
+				addl=""+green("N")+"  "
 			print "["+x[0]+" "+addl+"]",x[2],"to",x[1]
 				
 	def merge(self,mylist):
@@ -373,7 +405,7 @@ def post_emerge(retval=0):
 	elif not os.path.exists("/usr/bin/install-info"):
 		print "    /usr/bin/install-info doesn't exist; skipping info regeneration."
 	else:
-		print " \x1b[32;01m*\x1b[0m Regenerating GNU info directory index..."
+		print " "+green("*")+" Regenerating GNU info directory index..."
 		if os.path.exists(root+"usr/share/info/dir"):
 			os.rename(root+"usr/share/info/dir",root+"usr/share/info/dir.old")
 		icount=0
@@ -393,12 +425,12 @@ def post_emerge(retval=0):
 				icount=icount+1
 		if badcount:
 			if "--verbose" not in myopts:
-				print " \x1b[33;01m*\x1b[0m Processed",icount,"info files:",badcount,"errors; type \x1b[32;01memerge --verbose\x1b[0m to view errors."
+				print " "+yellow("*")+" Processed",icount,"info files:",badcount,"errors; type "+green("emerge --verbose")+" to view errors."
 			else:
-				print " \x1b[33;01m*\x1b[0m Processed",icount,"info files;",badcount,"errors."
+				print " "+yellow("*")+" Processed",icount,"info files;",badcount,"errors."
 
 		else:
-			print " \x1b[32;01m*\x1b[0m Processed",icount,"info files."
+			print " "+green("*")+" Processed",icount,"info files."
 	if portage.settings["CONFIG_PROTECT"]:
 		#number of directories with some protect files in them
 		procount=0
@@ -406,46 +438,17 @@ def post_emerge(retval=0):
 			if os.path.isdir(x):
 				a=commands.getstatusoutput("cd "+x+"; find -iname '._cfg????_*'")
 				if a[0]!=0:
-					print " \x1b[31;01m*\x1b[0m error scanning",x
+					print " "+red("*")+" error scanning",x
 				else:
 					files=string.split(a[1])
 					if files:
 						procount=procount+1
-						print " \x1b[33;01m* IMPORTANT:\x1b[0m",len(files),"config files in",x,"need updating."
+						print " "+yellow("* IMPORTANT:")+"",len(files),"config files in",x,"need updating."
 		if procount:
-			print " \x1b[33;01m*\x1b[0m Type \x1b[32;01memerge --help config\x1b[0m to learn how to update config files."
+			print " "+yellow("*")+" Type "+green("emerge --help config")+" to learn how to update config files."
 		print
 	sys.exit(retval)
 
-#number of ebuilds merged
-merged=0
-opts=["--world","--help","--pretend","--buildpkg","--usepkg","--autoclean","--clean","--debug","--fetchonly","--noreplace","--onlydeps","--verbose","--search","--unmerge","--safe"]
-modes=["rsync","system","update","config"]
-myopts=[]
-mymode=[]
-myfiles=[]
-edebug=0
-for x in sys.argv[1:]:
-	if len(x)>=2:
-		if x[0:2]=="--":
-			if x in opts:
-				myopts.append(x)
-			else:
-				print "!!! Error:",x,"is an invalid option."
-				sys.exit(1)
-		elif x in modes:
-			if len(mymode)>=1:
-				print "!!! Error: more than one mode specified on command-line."
-				print "!!! Available modes:",modes
-				sys.exit(1)
-			else:
-				mymode.append(x)
-		else:	
-				#this little conditional helps tab completion
-				if x[-1]=="/":
-					myfiles.append(x[:-1])
-				else:
-					myfiles.append(x)
 if not portage.settings.has_key("MAINTAINER_noclean"):
 	if not "--autoclean" in myopts:
 		myopts.append("--autoclean")
@@ -454,44 +457,44 @@ if "--debug" in myopts:
 if "--help" in myopts:
 	if len(mymode)==0:
 		print
-		print "\x1b[01mYou can also type \"emerge --help system\", \"emerge --help rsync\" and"
-		print "\"emerge --help config\" for additional help.\x1b[0m"
+		print bold("You can also type \"emerge --help system\", \"emerge --help rsync\" and")
+		print bold("\"emerge --help config\" for additional help.")
 		print
-		print "Usage: \x1b[36;01memerge\x1b[0m [ \x1b[32;01moptions\x1b[0m ] [ \x1b[36;01mebuildfile\x1b[0m | \x1b[36;01mtbz2file\x1b[0m ] | \x1b[36;01mdep\x1b[0m ]..."
-		print "       \x1b[36;01memerge\x1b[0m [ \x1b[32;01moptions\x1b[0m ] \x1b[36;01msystem\x1b[0m"
-		print "       \x1b[36;01memerge\x1b[0m [ \x1b[32;01m--clean\x1b[0m ] \x1b[36;01mrsync"
+		print turquoise("Usage: ")+turquoise("emerge")+" [ "+green("options")+" ] [ "+turquoise("ebuildfile")+" | "+turquoise("tbz2file")+" ] | "+turquoise("dep")+" ]..."
+		print "       "+turquoise("emerge")+" [ "+green("options")+" ] "+turquoise("system")
+		print "       "+turquoise("emerge")+" [ "+green("--clean")+" ] "+turquoise("rsync")
 		print
-		print "Options:"
-		print "       \x1b[32;01m--help\x1b[0m [ mode ]"
+		print turquoise("Options:")
+		print "       "+green("--help")+" [ mode ]"
 		print "              display this help (specify optional \"rsync\" or \"system\" for"
 		print "              more info)"
 		print 
-		print "       \x1b[32;01m--verbose\x1b[0m"
+		print "       "+green("--verbose")
 		print "              Tell emerge to run in verbose mode.  Currently, this causes"
 		print "              emerge to print out GNU info errors, if any."
 		print 
-		print "       \x1b[32;01m--debug\x1b[0m"
-		print "              Tell emerge to run the \x1b[36;01mebuild\x1b[0m command in --debug"
+		print "       "+green("--debug")
+		print "              Tell emerge to run the "+turquoise("ebuild")+" command in --debug"
 		print "              mode.  In this mode, the bash build environment will run with"
 		print "              the -x option, causing it to output verbose debug information"
 		print "              to stdout.  --debug is great for finding bash syntax errors."
 		print
-		print "       \x1b[32;01m--fetchonly\x1b[0m"
+		print "       "+green("--fetchonly")
 		print "              Instead of doing any package building, just perform fetches for"
 		print "              all packages (main package as well as all dependencies.)"
 		print
-		print "       \x1b[32;01m--onlydeps\x1b[0m"
+		print "       "+green("--onlydeps")
 		print "              Only merge (or pretend to merge) the dependencies of the"
 		print "              specified packages, not the packages themselves."
 		print
-		print "       \x1b[32;01m--noreplace\x1b[0m"
+		print "       "+green("--noreplace")
 		print "              Skip the packages specified on the command-line that have"
 		print "              already been installed.  Without this option, any packages,"
 		print "              ebuilds, or deps you specify on on the command-line *will* cause"
 		print "              Portage to remerge the package, even if it is already installed."
 		print "              Note that Portage will never remerge dependencies automatically."
 		print
-		print "       \x1b[32;01m--usepkg\x1b[0m"
+		print "       "+green("--usepkg")
 		print "              tell emerge to use binary packages (from $DISTDIR) if they are"
 		print "              available, thus possibly avoiding some time-consuming compiles."
 		print "              This option is useful for CD installs; you can export"
@@ -499,13 +502,13 @@ if "--help" in myopts:
 		print "              emerge \"pull\" binary packages from the CD in order to satisfy" 
 		print "              dependencies."
 		print
-		print "       \x1b[32;01m--buildpkg\x1b[0m"
+		print "       "+green("--buildpkg")
 		print "              tell emerge to build binary packages for all ebuilds processed"
 		print "              (in addition to actually merging the packages.  Useful for"
 		print "              maintainers or if you administrate multiple Gentoo Linux"
 		print "              systems (build once, emerge tbz2s everywhere)."
 		print
-		print "       \x1b[32;01m--autoclean\x1b[0m"
+		print "       "+green("--autoclean")
 		print "              emerge normally cleans out the package-specific temporary"
 		print "              build directory before it starts the building a package.  With"
 		print "              --autoclean, it will also clean the directory *after* the"
@@ -513,55 +516,55 @@ if "--help" in myopts:
 		print "              normal users, but maintainers can use this option to enable"
 		print "              autocleaning."
 		print
-		print "       \x1b[32;01m--pretend\x1b[0m"
+		print "       "+green("--pretend")
 		print "              instead of actually performing the merge, simply display what"
 		print "              ebuilds and tbz2s *would* have been installed if --pretend"
 		print "              weren't used.  Using --pretend is strongly recommended before"
 		print "              installing an unfamiliar package.  In the printout, N = new,"
 		print "              U = upgrading, R = replacing"
 		print
-		print "       \x1b[32;01m--unmerge\x1b[0m"
+		print "       "+green("--unmerge")
 		print "              removes an installed package. the arguments can be in two"
 		print "              different formats : /var/db/pkg/category/package-version"
 		print "              or category/package-version."
 		print "              A few examples of the second format:"
-		print "              \x1b[37;01mbinutils\x1b[0m matches"
+		print "              "+bold("binutils")+" matches"
 		print "                  binutils-2.11.90.0.7 and binutils-2.11.92.0.12.3-r1"
-		print "              \x1b[37;01m>binutils-2.11.90.0.7\x1b[0m matches"
+		print "              "+white(">binutils-2.11.90.0.7")+" matches"
 		print "                  binutils-2.11.92.0.12.3-r1"
-		print "              \x1b[37;01msys-devel/binutils\x1b[0m matches"
+		print "              "+white("sys-devel/binutils")+" matches"
 		print "                  binutils-2.11.90.0.7 and binutils-2.11.92.0.12.3-r1"
-		print "              \x1b[37;01msys-devel/binutils-2.11.90.0.7\x1b[0m matches"
+		print "              "+white("sys-devel/binutils-2.11.90.0.7")+" matches"
 		print "                  binutils-2.11.90.0.7"
-		print "              \x1b[37;01m>sys-devel/binutils-2.11.90.0.7\x1b[0m matches"
+		print "              "+white(">sys-devel/binutils-2.11.90.0.7")+" matches"
 		print "                  binutils-2.11.92.0.12.3-r1"
-		print "              \x1b[37;01m>=sys-devel/binutils-2.11.90.0.7\x1b[0m matches"
+		print "              "+white(">=sys-devel/binutils-2.11.90.0.7")+" matches"
 		print "                  binutils-2.11.90.0.7 and binutils-2.11.92.0.12.3-r1"
-		print "              \x1b[37;01m<sys-devel/binutils-2.11.92.0.12.3-r1\x1b[0m matches"
+		print "              "+white("<sys-devel/binutils-2.11.92.0.12.3-r1")+" matches"
 		print "                  binutils-2.11.90.0.7"
-		print "              \x1b[37;01m<=sys-devel/binutils-2.11.92.0.12.3-r1\x1b[0m matches"
+		print "              "+white("<=sys-devel/binutils-2.11.92.0.12.3-r1")+" matches"
 		print "                  binutils-2.11.90.0.7 and binutils-2.11.92.0.12.3-r1"
 		print
-		print "       \x1b[32;01m--safe\x1b[0m"
+		print "       "+green("--safe")
 		print "              complements the --unmerge option to make sure that the last"
 		print "              installed version of an application will not be unmerged"
 		print
-		print "       \x1b[32;01m--search\x1b[0m"
+		print "       "+green("--search")
 		print "              searches for matches of the supplied string in the current local"
 		print "              portage tree. The search string is a regular expression."
 		print "              A few examples: "
-		print "              \x1b[37;01memerge --search \"^kde\"\x1b[0m"
+		print "              "+white("emerge --search \"^kde\"")
 		print "                  list all packages starting with kde"
-		print "              \x1b[37;01memerge --search \"gcc$\"\x1b[0m"
+		print "              "+white("emerge --search \"gcc$\"")
 		print "                  list all packages ending with gcc"
-		print "              \x1b[37;01memerge --search \"\"\x1b[0m or"
-		print "              \x1b[37;01memerge --search \"*\"\x1b[0m"
+		print "              "+white("emerge --search \"\"")+" or"
+		print "              "+white("emerge --search \"*\"")
 		print "                  list all available packages "
 		print
 	elif "rsync" in mymode:
 		print
-		print "       \x1b[36;01memerge rsync"
-		print "       emerge \x1b[32;01m--clean\x1b[36;01m rsync\x1b[0m"
+		print "       "+turquoise("emerge rsync")
+		print "       "+turquoise("emerge ")+green("--clean")+turquoise(" rsync")
 		print
 		print "       \"emerge rsync\" initiates an rsync update with cvs.gentoo.org,"
 		print "       updating your Portage tree (typically in /usr/portage).  This option"
@@ -571,7 +574,7 @@ if "--help" in myopts:
 		print
 	elif "system" in mymode:
 		print
-		print "       \x1b[36;01memerge\x1b[0m [ \x1b[32;01moptions\x1b[0m ] \x1b[36;01msystem\x1b[0m"
+		print "       "+turquoise("emerge")+" [ "+green("options")+" ] "+turquoise("system")
 		print
 		print "       \"emerge system\" is the Portage system update command.  When run, it"
 		print "       will scan the etc/make.profile/packages file and determine what"
@@ -586,8 +589,7 @@ if "--help" in myopts:
 		print "       system\", just so you know what emerge is planning to do."
 		print
 	elif "config" in mymode:
-		outstuff="""
-\x1b[32;01mConfig file management support (preliminary)\x1b[0m
+		outstuff=green("Config file management support (preliminary)")+"""
 
 Portage has a special feature called "config file protection".  The purpose of
 this feature is to prevent new package installs from clobbering existig
